--- a/index.html
+++ b/index.html
@@ -413,8 +413,9 @@
                         <h3>&nbspצור קשר</h3>
                     </li>
                     <li>
-                        <i class="fa-solid fa-phone"></i>
-                        02-6525402
+                        
+                        <a href="intent://app/#Intent;scheme=appScheme;package=com.example.package;end"><i class="fa-solid fa-phone"></i>
+                            02-6525402</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-at"></i>
