--- a/index.html
+++ b/index.html
@@ -413,9 +413,8 @@
                         <h3>&nbspצור קשר</h3>
                     </li>
                     <li>
-                        
-                        <a href="intent://app/#Intent;scheme=appScheme;package=com.example.package;end"><i class="fa-solid fa-phone"></i>
-                            02-6525402</a>
+                       <i class="fa-solid fa-phone"></i>
+                            02-6525402
                     </li>
                     <li>
                         <i class="fa-solid fa-at"></i>
