--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <h2>פחדנים</h2>
                             <p>ברוכים הבאים לרמת פחדנים!<br> כאן, תגלו מגוון של אטרקציות מרגשות וקסומות שמתאימות לכל
                                 גיל.
-                                האטרקציות ברמה זו מעוצבות לספק חוויה מהנה ומרגשת, בלתי נשכחת. בברמה זו אנו מבטיחים שכל
+                                האטרקציות ברמה זו מעוצבות לספק חוויה מהנה ומרגשת, בלתי נשכחת. ברמה זו אנו מבטיחים שכל
                                 אחד ימצא
                                 משהו שיתאים לטעמו ויאפשר לו ליצור זכרונות של כיף והתרגשות.
                                 הקדימו לחוות חוויות יוצאות דופן ברמה הפחות מפחידה שלנו!
@@ -140,7 +140,7 @@
                             <h2>פחדנים</h2>
                             <p>ברוכים הבאים לרמת פחדנים!<br> כאן, תגלו מגוון של אטרקציות מרגשות וקסומות שמתאימות לכל
                                 גיל.
-                                האטרקציות ברמה זו מעוצבות לספק חוויה מהנה ומרגשת, בלתי נשכחת. בברמה זו אנו מבטיחים שכל
+                                האטרקציות ברמה זו מעוצבות לספק חוויה מהנה ומרגשת, בלתי נשכחת. ברמה זו אנו מבטיחים שכל
                                 אחד ימצא
                                 משהו שיתאים לטעמו ויאפשר לו ליצור זכרונות של כיף והתרגשות.
                                 הקדימו לחוות חוויות יוצאות דופן ברמה הפחות מפחידה שלנו!
